--- a/tools/diag-sim/package.json
+++ b/tools/diag-sim/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "fleetpulse-diag-simulator",
+  "name": "fleetpulse-diag-sim",
   "version": "1.0.0",
-  "description": "Diagnostic frame simulator for FleetPulse live telemetry testing",
+  "description": "FleetPulse diagnostic simulator - posts realistic J1939 CAN frames",
   "main": "simulator.js",
-  "bin": {
-    "fleetpulse-simulator": "./simulator.js"
-  },
   "scripts": {
     "start": "node simulator.js",
-    "normal": "SCENARIO=normal DURATION=120 node simulator.js",
-    "overheat": "SCENARIO=overheat DURATION=60 node simulator.js",
-    "lowpressure": "SCENARIO=lowpressure DURATION=60 node simulator.js"
+    "dev": "node simulator.js"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "keywords": [
+    "j1939",
+    "can",
+    "diagnostic",
+    "simulator"
+  ],
+  "author": "JRodAmazing",
+  "license": "MIT"
 }
