--- a/backend/HeavyOps.API/HeavyOps.API.csproj
+++ b/backend/HeavyOps.API/HeavyOps.API.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    <PackageReference Include="QuestPDF" Version="2025.7.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HeavyOps.Data\HeavyOps.Data.csproj" />
   </ItemGroup>
 
 </Project>
